--- a/wiki/TrayNotifier.wiki
+++ b/wiki/TrayNotifier.wiki
@@ -1,4 +1,4 @@
-#The TrayNotifier shows a red icon in the task bar and shows a dialog whenever PRTG discovers alarms etc.
+#summary The TrayNotifier shows a red icon in the task bar and shows a dialog whenever PRTG discovers alarms etc.
 
 = Introduction =
 
