--- a/wiki/PRTG_Tools_by_Gerard_Feijth.wiki
+++ b/wiki/PRTG_Tools_by_Gerard_Feijth.wiki
@@ -1,4 +1,4 @@
-#The "PRTG Tools family" offers clients for Windows and Windows CE and was written by Gerard Feijth
+#summary The "PRTG Tools family" offers clients for Windows and Windows CE and was written by Gerard Feijth
 
 = Introduction =
 
@@ -25,4 +25,3 @@ The Notifier Proxy runs as a webservice on a computer on your network. This can 
 ===Do I need to use the Notifier Proxy? ===
  
 No, you  don't. The NotifierCE can connect directly to the Network Monitor server using HTTP or HTTPS. (Using HTTP is not recommended, as the username and password are send over the internet in plain text.) But, using the Notifier Proxy will give you some advantages:    Data transmission to and from the mobile device is kept to a minimum by sending short requests to the Notifier Proxy who then translates them to the full length request to the Network Monitor server. The reply’s from the Network Monitor server are also truncated to a minimum. The Network Monitor server can communicate over HTTP on the internal network, without exposing its web interface to the internet.  The Notifier Proxy can reject mobile devices that are unknown to the  Notifier Proxy.    The Notifier Proxy can keep a log of all requests.    The Notifier Proxy can send software updates of NotifierCE to the mobile devices. 
-
