--- a/wiki/PRTG_Tools_by_Gerard_Feijth.wiki
+++ b/wiki/PRTG_Tools_by_Gerard_Feijth.wiki
@@ -13,11 +13,11 @@ The PRTG Tools family consists out of 4 separate applications:
 ==TrayNotifier==
 The TrayNotifier runs on a Windows Workstation. It notifies the user of an alarm condition with a flashing red dot in the system tray.  It can automatically popup and play a sound for extra attention. 
  
-==NotifierCe==
-The NotifierCE runs on a Windows Mobile device. It can collect sensor data on demand. 
+==[NotifierCE NotifierCE]==
+The [NotifierCE NotifierCE] runs on a Windows Mobile device. It can collect sensor data on demand. 
  
-==NotifierProxy==
-Using the NotifierProxy, the workstations in your network can connect to the Network Monitor server using the standard HTTP port 80, while the Network Monitor server is exposed to the internet through the Notifier Proxy only. The Notifier Proxy can be set up to only allow HTTPS connections from the NotifierCE. The Notifier Proxy can also be 
+==[NotifierProxy Notifier Proxy]==
+Using the [NotifierProxy Notifier Proxy], the workstations in your network can connect to the Network Monitor server using the standard HTTP port 80, while the Network Monitor server is exposed to the internet through the Notifier Proxy only. The Notifier Proxy can be set up to only allow HTTPS connections from the NotifierCE. The Notifier Proxy can also be 
 set to only allow known WindowsCE devices to connect. This way you can use a full access account to safely connect to the Network Monitor server, pausing and resuming sensors, without exposing its web interface to the internet. 
 The Notifier Proxy can also send updates for the NotifierCE to the mobile devices. 
 The Notifier Proxy runs as a webservice on a computer on your network. This can be the same machine as where the Network Monitor runs on.  The Notifier Proxy runs on IIS witch has to be installed on the target machine. 
