--- a/wiki/NotifierProxy.wiki
+++ b/wiki/NotifierProxy.wiki
@@ -7,6 +7,11 @@ NotifierProxy allows the NotifierCE and TrayNotifier to connect to the Network M
 = Details =
 
 The Notifier Proxy can work on any HTTP or HTTPS/SSL port and can be installed on a separate Windows machine or on the same machine as the Network Monitor Server. In this manual its assumed that the Notfier Proxy is installed on the same machine as the Network Monitor Server, listens  on HTTPS/SSL port 443 and communicates with the Network Monitor Server on HTTP port 80. 
+
+
+===Do I need to use the Notifier Proxy? ===
+ 
+No, you  don't. The NotifierCE can connect directly to the Network Monitor server using HTTP or HTTPS. (Using HTTP is not recommended, as the username and password are send over the internet in plain text.) But, using the Notifier Proxy will give you some advantages:    Data transmission to and from the mobile device is kept to a minimum by sending short requests to the Notifier Proxy who then translates them to the full length request to the Network Monitor server. The reply’s from the Network Monitor server are also truncated to a minimum. The Network Monitor server can communicate over HTTP on the internal network, without exposing its web interface to the internet.  The Notifier Proxy can reject mobile devices that are unknown to the  Notifier Proxy.    The Notifier Proxy can keep a log of all requests.    The Notifier Proxy can send software updates of NotifierCE to the mobile devices. 
  
 ==Network Firewall==
  
