Edited wiki page through web user interface.

--- a/wiki/PRTG_Tools_by_Gerard_Feijth.wiki
+++ b/wiki/PRTG_Tools_by_Gerard_Feijth.wiki
@@ -21,3 +21,9 @@ Using the [NotifierProxy Notifier Proxy], the workstations in your network can c
 set to only allow known WindowsCE devices to connect. This way you can use a full access account to safely connect to the Network Monitor server, pausing and resuming sensors, without exposing its web interface to the internet. 
 The Notifier Proxy can also send updates for the NotifierCE to the mobile devices. 
 The Notifier Proxy runs as a webservice on a computer on your network. This can be the same machine as where the Network Monitor runs on.  The Notifier Proxy runs on IIS witch has to be installed on the target machine. 
+
+
+=More Information=
+Please see the Documentation PDF for details and screenshots:
+
+http://prtg7addons.googlecode.com/files/PRTG%20Tools%20Family%201.0.pdf 
