--- a/wiki/PRTG_Tools_by_Gerard_Feijth.wiki
+++ b/wiki/PRTG_Tools_by_Gerard_Feijth.wiki
@@ -29,4 +29,4 @@ Please see the Documentation PDF for details and screenshots:
 http://prtg7addons.googlecode.com/files/PRTG%20Tools%20Family%201.0.pdf 
 
 
-==[VersionHistory Version history]==
+See the [VersionHistory Version history] page for an overview of what's new.
