--- a/wiki/VersionHistory.wiki
+++ b/wiki/VersionHistory.wiki
@@ -4,8 +4,7 @@
 
 ==TrayNotifier==
 
-===1.0.1.7 10/02/2009===
- * Reload PRTG Monitor version information after a connection loss.
+===1.0.1.7 10/02/2009=== * Reload PRTG Monitor version information after a connection loss.
  * Connection port can be set to use other then port 80 or HTTPS/SSL.
  * Minor changes in the user interface.
 
@@ -14,9 +13,13 @@
 
 
 ==[NotifierCE NotifierCE]==
-===1.0.1.6 20/01/2009===
+===1.0.0.2 10/02/2009===
  * First public version.
 
 ==[NotifierProxy Notifier Proxy]==
-===1.0.1.6 20/01/2009===
+===1.0.0.1 10/02/2009===
+ * First public version.
+
+==Notifier Proxy Configurator]==
+===1.0.0.1 10/02/2009===
  * First public version.
