Edited wiki page through web user interface.

--- a/wiki/VersionHistory.wiki
+++ b/wiki/VersionHistory.wiki
@@ -1,4 +1,4 @@
-#summary [VersionHistory Version history] for the "PRTG Tools family".
+#summary Version history for the "PRTG Tools family".
 
 
 ==TrayNotifier==
