Edited wiki page through web user interface.

--- a/wiki/VersionHistory.wiki
+++ b/wiki/VersionHistory.wiki
@@ -1,7 +1,7 @@
 #summary Version history for the "PRTG Tools family".
 
 
-==TrayNotifier==
+==TrayNotifier==\\ 
 
 ====Coming Up====
  * Fixed an issue with characters like "#" in the password.
