--- a/wiki/VersionHistory.wiki
+++ b/wiki/VersionHistory.wiki
@@ -7,6 +7,8 @@ http://gf-ptf.googlecode.com/files/ToolsFamily.png
 
 ====Coming Up====
  * Fixed an issue with characters like "#" in the password.
+ * New: Automatically check for updates at startup.
+ * New: Associate one ore more External Applications with a sensor, device or group.
  * New: If the Network Monitor server returns a HTML error, the error is shown to the user.
  * New: Integrated web browser, does not show the url with username and password.
  * New: Filter setting to show only sensors of a specific probe, group or device.
