--- a/wiki/VersionHistory.wiki
+++ b/wiki/VersionHistory.wiki
@@ -4,11 +4,9 @@
 http://gf-ptf.googlecode.com/files/ToolsFamily.png
 
 ==TrayNotifier==
-
 ====1.0.1.9 _08/04/2009_==== 
  * PRTG has changed some of its xml tags in version 7.1.1.3074. This version of the TrayNotifier recognizes these new tags and is also backwards compatible.
  * Bugfix: A new PRTG version was not always recognized correctly, this is fixed now.
-
 ====1.0.1.8 _01/04/2009_==== 
  * Fixed an issue with characters like "#" in the password.
  * New: Automatically check for updates at startup.
@@ -24,34 +22,37 @@ http://gf-ptf.googlecode.com/files/ToolsFamily.png
   # The passhash is now automatically used instead of the password.
   # An error can now be simulated on a sensor.
   # The notification for a sensor or group can now be tested.
-
-
 ====1.0.1.7 _10/02/2009_==== 
  * Reload PRTG Monitor version information after a connection loss.
  * Connection port can be set to use other then port 80 or HTTPS/SSL.
  * Minor changes in the user interface.
-
 ====1.0.1.6 _20/01/2009_====
  * First public version.
 
 ----
+
 ==[NotifierCE NotifierCE]==
+====1.0.0.4 _08/04/2009_==== 
+ * PRTG has changed some of its xml tags in version 7.1.1.3074. This version of the NotifierCE recognizes these new tags and is also backwards compatible.
 ====1.0.0.3 _01/04/2009_==== 
  * New: Sensor tree, showing probes, groups, devices and sensors.
  * New: APC Power Distribution Unit integration, allowing the user to reboot an outlet.
-
 ====1.0.0.2 _10/02/2009_====
  * First public version.
+
 ----
+
 ==[NotifierProxy Notifier Proxy]==
+====1.0.0.3 _08/04/2009_==== 
+ * PRTG has changed some of its xml tags in version 7.1.1.3074. This version of the NotifierProxy recognizes these new tags and is also backwards compatible.
 ====1.0.0.2 _01/04/2009_==== 
  * Support for the sensor tree, showing probes, groups, devices and sensors.
  * Support for PDU integration, allowing the user to reboot an outlet.
-
-
 ====1.0.0.1 _10/02/2009_====
  * First public version.
+
 ----
+
 ==[NotifierProxy Notifier Proxy Configurator]==
 ====1.0.0.2 _05/04/2009_====
  * Bugfix: After installing an update for Notifier Proxy, the Proxy Configurator detected a new version at every launch of the program and could not complete the setup.
@@ -60,5 +61,6 @@ http://gf-ptf.googlecode.com/files/ToolsFamily.png
  * First public version.
 
 ----
+
 ====Comments, Suggestions or Feature Requests?====
 Contact the author [mailto:gerard%2Efeijth%40gmail%2Ecom here]
