--- a/wiki/PRTG_Tools_by_Gerard_Feijth.wiki
+++ b/wiki/PRTG_Tools_by_Gerard_Feijth.wiki
@@ -1,4 +1,4 @@
-#summary Krijco PRTG Tools: The "PRTG Tools family" offers clients for Windows and Windows CE and was written by Gerard Feijth
+#summary Krijco PRTG Tools: The "PRTG Tools family" offers clients for Windows and Windows CE (by Gerard Feijth)
 
 http://gf-ptf.googlecode.com/files/ToolsFamily.png
 
