--- a/wiki/NotifierProxy.wiki
+++ b/wiki/NotifierProxy.wiki
@@ -1,4 +1,4 @@
-#summary NotifierProxy allows the NotifierCE to connect to the Network Monitor server without the need to expose the server's web interface to the Internet.
+#summary Krijco PRTG Tools: NotifierProxy allows the NotifierCE to connect to the Network Monitor server without the need to expose the server's web interface to the Internet.
 
 http://gf-ptf.googlecode.com/files/NotifierProxy.png
 
