Edited wiki page through web user interface.

--- a/wiki/TrayNotifier.wiki
+++ b/wiki/TrayNotifier.wiki
@@ -1,4 +1,4 @@
-#summary The TrayNotifier shows a red icon in the task bar and shows a dialog whenever PRTG discovers alarms etc.
+#summary Krijco PRTG Tools: TrayNotifier shows a red icon in the task bar and shows a dialog whenever PRTG discovers alarms etc.
 
 http://gf-ptf.googlecode.com/files/TrayNotifier.png
 
