--- a/wiki/VersionHistory.wiki
+++ b/wiki/VersionHistory.wiki
@@ -1,4 +1,4 @@
-#summary Version history for the "PRTG Tools family".
+#summary Krijco PRTG Tools: Version history for the "PRTG Tools family".
 
 
 http://gf-ptf.googlecode.com/files/ToolsFamily.png
