Edited wiki page through web user interface.

--- a/wiki/NotifierProxy.wiki
+++ b/wiki/NotifierProxy.wiki
@@ -27,6 +27,4 @@ The Notifier Proxy runs on Internet Information Services (IIS) and targets the .
  
 
 =More Information=
-Please see the Documentation PDF for details and screenshots:
-
-http://prtg7addons.googlecode.com/files/PRTG%20Tools%20Family%201.1.pdf 
+Please see the [NotifierDocumentation Documentation] for details and screenshots.
