Edited wiki page through web user interface.

--- a/wiki/TrayNotifier.wiki
+++ b/wiki/TrayNotifier.wiki
@@ -16,6 +16,4 @@ Server or the Notifier Proxy to use.
 The Actions tab lets you set the refresh time and the latency time (minimum number of seconds a sensor must be down before it shows up). You can also have a sound played and the alarms window popped up when an alarm condition occurs. 
 
 =More Information=
-Please see the Documentation PDF for details and screenshots:
-
-http://prtg7addons.googlecode.com/files/PRTG%20Tools%20Family%201.1.pdf 
+Please see the [NotifierDocumentation Documentation] for details and screenshots.
