--- a/wiki/VersionHistory.wiki
+++ b/wiki/VersionHistory.wiki
@@ -43,6 +43,8 @@ http://gf-ptf.googlecode.com/files/ToolsFamily.png
 ----
 
 ==[NotifierProxy Notifier Proxy]==
+====1.0.0.4 _13/04/2009_====
+ * Added support for the NotifierGadget 
 ====1.0.0.3 _08/04/2009_==== 
  * PRTG has changed some of its xml tags in version 7.1.1.3074. This version of the NotifierProxy recognizes these new tags and is also backwards compatible.
 ====1.0.0.2 _01/04/2009_==== 
