--- a/wiki/NotifierCE.wiki
+++ b/wiki/NotifierCE.wiki
@@ -1,4 +1,5 @@
 #summary Krijco PRTG Tools: NotifierCE runs on Windows CE powered mobile phones and can display the status of sensors from a PRTG installation
+#sidebar KrijcoWikiSidebar
 
 http://gf-ptf.googlecode.com/files/NotifierCE.png
 
