Edited wiki page through web user interface.

--- a/wiki/NotifierGadget.wiki
+++ b/wiki/NotifierGadget.wiki
@@ -1,4 +1,5 @@
 #summary Krijco PRTG Tools: NotifierGadget is installed in the Vista sidebar.
+#sidebar KrijcoWikiSidebar
 
 http://gf-ptf.googlecode.com/files/NotifierGadget.png
 
