--- a/wiki/TrayNotifier.wiki
+++ b/wiki/TrayNotifier.wiki
@@ -1,4 +1,5 @@
 #summary Krijco PRTG Tools: TrayNotifier shows a red icon in the task bar and shows a dialog whenever PRTG discovers alarms etc.
+#sidebar KrijcoWikiSidebar
 
 http://gf-ptf.googlecode.com/files/TrayNotifier.png
 
