Edited wiki page through web user interface.

--- a/wiki/VersionHistory.wiki
+++ b/wiki/VersionHistory.wiki
@@ -1,4 +1,5 @@
 #summary Krijco PRTG Tools: Version history for the "PRTG Tools family".
+#sidebar KrijcoWikiSidebar
 
 
 http://gf-ptf.googlecode.com/files/ToolsFamily.png
