--- a/wiki/KrijcoWikiSidebar.wiki
+++ b/wiki/KrijcoWikiSidebar.wiki
@@ -1,13 +1,13 @@
 #summary Krijco PRTG Tools Wiki Sidebar
 http://gf-ptf.googlecode.com/files/ToolsFamily_transparent.png
-===PRTG Tools Family===
+=PRTG Tools Family=
 
-[PRTG_Tools_by_Gerard_Feijth Home]
+====[PRTG_Tools_by_Gerard_Feijth Home]====
 
- * [TrayNotifier]
- * [NotifierGadget]
- * [NotifierCE]
- * [NotifierProxy]
+ * ====[TrayNotifier]====
+ * ====[NotifierGadget]====
+ * ====[NotifierCE]====
+ * ====[NotifierProxy]====
 
 http://gf-ptf.googlecode.com/files/Document-48x48.png [NotifierDocumentation Documentation]
 
@@ -18,5 +18,3 @@ http://gf-ptf.googlecode.com/files/Download-48x48.png [http://code.google.com/p/
 ====Comments, Suggestions or Feature Requests?====
 http://gf-ptf.googlecode.com/files/Mail-48x48.png Contact the author [mailto:gerard%2Efeijth%40gmail%2Ecom?subject=Notifier%20Family here]
  
-
-
