--- a/wiki/KrijcoWikiSidebar.wiki
+++ b/wiki/KrijcoWikiSidebar.wiki
@@ -1,4 +1,5 @@
-#summary Krijco PRTG Tools Wiki Sidebar
+#summary Sidebar DO NOT DELETE !!!
+#labels Deprecated
 http://gf-ptf.googlecode.com/files/ToolsFamily_transparent.png
 =PRTG Tools Family=
 
