--- a/wiki/KrijcoWikiSidebar.wiki
+++ b/wiki/KrijcoWikiSidebar.wiki
@@ -21,5 +21,5 @@ http://gf-ptf.googlecode.com/files/Open-48x48.png [VersionHistory]
 http://gf-ptf.googlecode.com/files/Download-48x48.png [http://code.google.com/p/prtg7addons/downloads/list?can=2&q=Krijco+PRTG+Tools Downloads]
 
 ====Comments, Suggestions or Feature Requests?====
-http://gf-ptf.googlecode.com/files/Mail-48x48.png Contact the author [mailto:gerard%2Efeijth%40gmail%2Ecom?subject=Notifier%20Family here]
+http://gf-ptf.googlecode.com/files/Mail-48x48.png Leave a note [UserFeedback here]
  
