--- a/wiki/UserFeedback.wiki
+++ b/wiki/UserFeedback.wiki
@@ -1,5 +1,5 @@
 #summary Krijco PRTG Tools: User feedback.
-#sidebar KrijcoWikiSidebar
+#sidebar KrijcoWikiSidebar_HomeOnly
 
 http://gf-ptf.googlecode.com/files/ToolsFamily.png
 
