Edited wiki page through web user interface.

--- a/wiki/UserFeedback.wiki
+++ b/wiki/UserFeedback.wiki
@@ -1,5 +1,5 @@
 #summary Krijco PRTG Tools: User feedback.
-#sidebar KrijcoWikiSidebar_HomeOnly
+#sidebar KrijcoWikiSidebar2
 
 http://gf-ptf.googlecode.com/files/ToolsFamily.png
 
