--- a/wiki/KrijcoWikiSidebar2.wiki
+++ b/wiki/KrijcoWikiSidebar2.wiki
@@ -1,4 +1,5 @@
 #summary Sidebar2 DO NOT DELETE !!!
+#labels Deprecated
 http://gf-ptf.googlecode.com/files/ToolsFamily_transparent.png
 =PRTG Tools Family=
 
