--- a/wiki/NotifierGadget.wiki
+++ b/wiki/NotifierGadget.wiki
@@ -13,7 +13,7 @@ The NotifierGadget is installed in the Vista sidebar, providing you with a const
 
 http://gf-ptf.googlecode.com/files/Gadget.png
 
-Clicking a text part of the gadget opens your default Network Monitor webpage.
+Clicking the server name part of the gadget opens your default Network Monitor webpage. Clicking the Alarms/Warnings/Pasused text can popup the TrayNotifier sensor window.
 
 =More Information=
 Please see the [NotifierDocumentation Documentation] for details and screenshots.
