--- a/wiki/VersionHistory.wiki
+++ b/wiki/VersionHistory.wiki
@@ -4,13 +4,24 @@
 
 http://gf-ptf.googlecode.com/files/ToolsFamily.png
 
+
+*Latest versions:*
+|| *Application* || *Version* || *Date* || *Download* ||
+||!TrayNotifier||1.0.2.2||22/04/2009||[http://prtg7addons.googlecode.com/files/Krijco.TrayNotifier.zip here]||
+||!NotifierGadget||1.0.3||21/04/2009||[http://prtg7addons.googlecode.com/files/Krijco.NotifierGadget.zip here]||
+||NotifierCE||1.0.0.4||08/04/2009||[http://prtg7addons.googlecode.com/files/Krijco.NotifierCE.zip here]||
+||!NotifierProxy||1.0.0.4||13/04/2009||[http://prtg7addons.googlecode.com/files/Krijco.NotifierProxy.zip here]||
+||!ProxyConfigurator||1.0.0.3||22/04/2009||[http://prtg7addons.googlecode.com/files/Krijco.ProxyConfigurator.zip here]||
+
 ==TrayNotifier==
+====1.0.2.2 _22/04/2009_====
+ * Bugfix: !TrayNotifier could crash on non Vista operating systems. This bug was introduced in version 1.0.2.1
 ====1.0.2.1 _17/04/2009_====
- * New: Interaction with the NotifierGadget, clicking Alarms, Warnings or Paused in the Gadget opens the TrayNotifier sensor window.
+ * New: Interaction with the !NotifierGadget, clicking Alarms, Warnings or Paused in the Gadget opens the !TrayNotifier sensor window.
  * New: Move objects up & down in the sensortree. Groups, Devices and Sensors can now be moved up and down in the sensortree.
- * New: Option to pause the TrayNotifier. After pausing the TrayNotifier the icon in the systemtray turns yellow. 
+ * New: Option to pause the !TrayNotifier. After pausing the !TrayNotifier the icon in the systemtray turns yellow. 
 ====1.0.1.9 _08/04/2009_==== 
- * PRTG has changed some of its xml tags in version 7.1.1.3074. This version of the TrayNotifier recognizes these new tags and is also backwards compatible.
+ * PRTG has changed some of its xml tags in version 7.1.1.3074. This version of the !TrayNotifier recognizes these new tags and is also backwards compatible.
  * Bugfix: A new PRTG version was not always recognized correctly, this is fixed now.
 ====1.0.1.8 _01/04/2009_==== 
  * Fixed an issue with characters like "#" in the password.
@@ -49,9 +60,9 @@ http://gf-ptf.googlecode.com/files/ToolsFamily.png
 
 ==[NotifierProxy Notifier Proxy]==
 ====1.0.0.4 _13/04/2009_====
- * Added support for the NotifierGadget 
+ * Added support for the !NotifierGadget 
 ====1.0.0.3 _08/04/2009_==== 
- * PRTG has changed some of its xml tags in version 7.1.1.3074. This version of the NotifierProxy recognizes these new tags and is also backwards compatible.
+ * PRTG has changed some of its xml tags in version 7.1.1.3074. This version of the !NotifierProxy recognizes these new tags and is also backwards compatible.
 ====1.0.0.2 _01/04/2009_==== 
  * Support for the sensor tree, showing probes, groups, devices and sensors.
  * Support for PDU integration, allowing the user to reboot an outlet.
@@ -61,6 +72,8 @@ http://gf-ptf.googlecode.com/files/ToolsFamily.png
 ----
 
 ==[NotifierProxy Notifier Proxy Configurator]==
+====1.0.0.3 _22/04/2009_====
+ * Bugfix: Checking the alternate port checkbox was not always persistent.
 ====1.0.0.2 _05/04/2009_====
  * Bugfix: After installing an update for Notifier Proxy, the Proxy Configurator detected a new version at every launch of the program and could not complete the setup.
  * Changed the logo to fit the rest of the "Family".
@@ -69,14 +82,13 @@ http://gf-ptf.googlecode.com/files/ToolsFamily.png
 
 ----
 
-==[NotifierGadget]==  
-Download latest version [http://prtg7addons.googlecode.com/files/Krijco.NotifierGadget.zip here]
+==[NotifierGadget]==
 ====1.0.3 _21/04/2009_====
  * Native PRTG now also reports Warnings and Paused sensors.
- * Fixed an interactivity issue with the TrayNotifier, where the TrayNotifier would popup every 5-10 minutes.
+ * Fixed an interactivity issue with the !TrayNotifier, where the !TrayNotifier could popup every 5-10 minutes.
 ====1.0.2 _17/04/2009_====
  * Now also works with native PRTG (see documentation for explanation).
  * Improved error handling.
- * Added interactivity with the TrayNotifier.
+ * Added interactivity with the !TrayNotifier.
 ====1.0.1 _13/04/2009_====
  * First public version
