--- a/wiki/NotifierGadget.wiki
+++ b/wiki/NotifierGadget.wiki
@@ -1,15 +1,18 @@
 #summary Krijco PRTG Tools: NotifierGadget is installed in the Vista sidebar.
 #sidebar KrijcoWikiSidebar
 
+
 http://gf-ptf.googlecode.com/files/NotifierGadget.png
 
 = Introduction =
 
-The NotifierGadget is installed in the Vista sidebar, providing you with a constant view of the current number of alarms, warnings and paused sensors. 
+The _!NotifierGadget_ is installed in the Vista sidebar, providing you with a constant view of the current number of alarms, warnings and paused sensors. 
 
 = Details =
 
-The NotifierGadget is installed in the Vista sidebar, providing you with a constant view of the current number of alarms, warnings and paused sensors. Depending on the number of alarms, warnings and paused sensors, the color changes from red to yellow or blue. If there are no alarms, the prtg gradient is shown in the background.
+The _!NotifierGadget_ is installed in the Vista sidebar, providing you with a constant view of the current number of alarms, warnings and paused sensors. Depending on the number of alarms, warnings and paused sensors, the color changes from red to yellow or blue. If there are no alarms, the prtg gradient is shown in the background.
+
+The _!NotifierGadget_ can be used with native PRTG or by using the NotifierProxy.
 
 http://gf-ptf.googlecode.com/files/Gadget.png
 
