--- a/wiki/NotifierGadget.wiki
+++ b/wiki/NotifierGadget.wiki
@@ -16,7 +16,7 @@ The _!NotifierGadget_ can be used with native PRTG or by using the NotifierProxy
 
 http://gf-ptf.googlecode.com/files/Gadget.png
 
-Clicking the server name part of the gadget opens your default Network Monitor webpage. Clicking the Alarms/Warnings/Pasused text can popup the TrayNotifier sensor window.
+Clicking the server name part of the gadget opens your default Network Monitor webpage. Clicking the Alarms/Warnings/Paused text can popup the TrayNotifier sensor window.
 
 =More Information=
 Please see the [NotifierDocumentation Documentation] for details and screenshots.
