Edited wiki page through web user interface.

--- a/wiki/KrijcoWikiSidebar.wiki
+++ b/wiki/KrijcoWikiSidebar.wiki
@@ -12,6 +12,7 @@ http://gf-ptf.googlecode.com/files/PRTGToolsFamily_65x119.png
  * ====[NotifierGadgetXP]====
  * ====[NotifierCE]====
  * ====[NotifierProxy]====
+ * ====[Distribution Distribution tool]====
 
  ----
 
